[package]
name = "parse_that"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
path = "./crab/lib.rs"
name = "parse_that"

[[bin]]
name = "parse_that"
path = "./crab/main.rs"

[dependencies]
wasm-bindgen = "0.2"
regex = "1"
js-sys = "0.3"
lazy_static = "1.4.0"

[unstable]
bench = true
