[package]
name = "parse_that"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parse_that"
path = "./src/main.rs"
test = false
bench = false

[[test]]
name = "parse_that"
path = "./src/lib.rs"
bench = false


[[bench]]
name = "parse_that"
harness = false


[lib]
name = "parse_that"
path = "./src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[dependencies]
regex = { version = "1", features = ["perf"] }
colored = "2.0.0"
fnv = "1.0.7"
tikv-jemallocator = "0.5.0"
lazy_static = "1.4.0"

[dev-dependencies]
bencher = "0.1.5"
pest = "2.5.6"
pest_grammars = "2.5.6"


[unstable]
let_chains = true
bench = true

[features]
debug = []
perf = []
