[package]
name = "bbnf"
version = "0.1.0"
edition = "2024"

[lib]
name = "bbnf"
path = "src/lib.rs"

[dependencies]
pprint = { path = "/Users/mkbabb/Programming/pprint" }
parse_that = { path = "../parse_that" }

regex = { version = "1.11", features = ["perf"] }

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
indexmap = "2"

lazy_static = "1"
