[package]
name = "parse_that"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Zero-copy parser combinator library for Rust"
repository = "https://github.com/mkbabb/parse-that"

[lib]
name = "parse_that"
path = "src/lib.rs"

[[bench]]
name = "parse_that"
harness = false

[[bench]]
name = "nom"
harness = false

[[bench]]
name = "serde"
harness = false

[[bench]]
name = "pest"
harness = false

[[bench]]
name = "jiter"
harness = false

[[bench]]
name = "simd_json"
harness = false

[[bench]]
name = "sonic_rs"
harness = false

[[bench]]
name = "winnow"
harness = false

[[bench]]
name = "serde_json_borrow"
harness = false

[dependencies]
pprint = { version = "0.3.0", path = "/Users/mkbabb/Programming/pprint" }
regex = { version = "1.11", features = ["perf"] }
colored = "3"
memchr = "2.5.0"
aho-corasick = "1.1"
fast-float2 = "0.2"

[dev-dependencies]
serde_json = "1.0.94"
serde = "1.0.156"
bencher = "0.1.5"
pest = "2.5.6"
pest_grammars = "2.5.6"
nom = "7.1.3"
jiter = "0.8"
simd-json = "0.14"
sonic-rs = "0.5"
winnow = "0.7"
serde_json_borrow = "0.9"
