[package]
name = "parse_that"
version = "0.3.3"
edition = "2024"
license = "MIT"
description = "Zero-copy parser combinator library for Rust"
repository = "https://github.com/mkbabb/parse-that"

[lib]
name = "parse_that"
path = "src/lib.rs"

[features]
default = []
diagnostics = ["dep:colored"]

[[bench]]
name = "nom"
harness = false

[[bench]]
name = "serde"
harness = false

[[bench]]
name = "pest"
harness = false

[[bench]]
name = "jiter"
harness = false

[[bench]]
name = "simd_json"
harness = false

[[bench]]
name = "sonic_rs"
harness = false

[[bench]]
name = "winnow"
harness = false

[[bench]]
name = "serde_json_borrow"
harness = false

[[bench]]
name = "parse_that_combinator"
harness = false

[[bench]]
name = "micro_parse_that"
harness = false

[[bench]]
name = "parse_that_css"
harness = false

[[bench]]
name = "lightningcss_bench"
harness = false

[[bench]]
name = "cssparser_bench"
harness = false

[[bench]]
name = "bbnf_json"
harness = false

[[bench]]
name = "bbnf_css"
harness = false

[[bench]]
name = "bbnf_json_owned"
harness = false

[[bench]]
name = "bbnf_json_borrow"
harness = false

[dependencies]
pprint = "0.3"
regex = { version = "1.11", features = ["perf"] }
colored = { version = "3", optional = true }
memchr = "2.5.0"
aho-corasick = "1.1"
fast-float2 = "0.2"
smallvec = "1.13"
smallbox = { version = "0.8", features = ["nightly"] }

[dev-dependencies]
serde_json = "1.0.94"
serde = "1.0.156"
bencher = "0.1.5"
pest = "2.5.6"
pest_grammars = "2.5.6"
nom = "7.1.3"
jiter = "0.8"
simd-json = "0.14"
sonic-rs = "0.5"
winnow = "0.7"
serde_json_borrow = "0.9"
lightningcss = "1.0.0-alpha.70"
cssparser = "0.34"
bbnf = "0.2"
bbnf_derive = "0.2"
mimalloc = "0.1"
fast-float2 = "0.2"
