[package]
name = "src"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
pretty_derive = { path = "../pretty/derive" }
pretty = { path = "../pretty" }
regex = "1.7.3"
parse_that = { path = "../parse_that" }
bbnf = { path = "../bbnf" }
bbnf_derive = { path = "../bbnf/derive" }

fnv = "1"

[features]
pretty = []
