[package]
name = "parse_that_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
pprint = { path = "/Users/mkbabb/Programming/pprint" }
regex = "1.11"
parse_that = { path = "../parse_that" }
bbnf = { path = "../bbnf" }
bbnf_derive = { path = "../bbnf/derive" }
fnv = "1"
