[package]
name = "bbnf_derive"
version = "0.1.0"
edition = "2021"

[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
bbnf = { path = "../" }
pprint = { path = "/Users/mkbabb/Programming/pprint" }
parse_that = { path = "../../parse_that" }

syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
indexmap = "2"
