[package]
name = "bbnf_derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Derive macro for generating parsers from BBNF grammars"
repository = "https://github.com/mkbabb/parse-that"

[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
bbnf = { version = "0.1.0", path = "../" }
pprint = { version = "0.3.0", path = "/Users/mkbabb/Programming/pprint" }
parse_that = { version = "0.1.0", path = "../../parse_that" }

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
indexmap = "2"
